--- a/public/style/index.css
+++ b/public/style/index.css
@@ -54,9 +54,13 @@ section.recommended {
 }
 
 .marquee-tag-container img:hover{
-    translate: scale(1.1);
-    
+    scale: 1.05;
 }
+
+.marquee-tag-container img {
+    transition: 0.2s;
+}
+
 .marquee-tag {
     margin-left: 0.75rem;
 }
