--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,5 +1,109 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
+
 body {
-    color: red;
-    margin: 0;
-    padding: 0;
+  color: rgb(0, 0, 0);
+  margin: 0;
+  padding: 20px;
+}
+
+:root {
+  --accent: #1e0e62;
+  --secondAccent: #25dac5;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+h1 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 70px;
+  color: var(--accent);
+  margin: 0;
+}
+
+h2 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 52px;
+  letter-spacing: -0.4px;
+  color: var(--accent);
+  margin: 0;
+}
+
+h3 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 32px;
+  color: var(--accent);
+  margin: 0;
+}
+
+h4 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  color: rgba(21, 20, 57, 0.4);
+  margin: 0;
+}
+
+h5 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 26px;
+
+  letter-spacing: 2px;
+  text-transform: uppercase;
+
+  color: rgba(21, 20, 57, 0.4);
+  margin: 0;
+}
+
+p {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 22px;
+
+  color: rgba(21, 20, 57, 0.4);
+}
+
+.column11 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+@media screen and (max-width: 800px) {
+  .column11 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .removeOnSmallScreen {
+    display: none !important;
+  }
+
+  h1 {
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  .hero--content {
+    margin-top: 20px;
+    margin-bottom: 25px;
+  }
 }
