--- a/public/style/index.css
+++ b/public/style/index.css
@@ -10,10 +10,55 @@
     --scroll-end: calc(-100% - var(--gap))
 }
 section {
-    width: 100vw;
+    width: 100%;
+    text-align: center;
 }
 section.recommended {
     width: 80%;
+}
+
+section.title h1 {
+    font-size: 3em;
+}
+
+.button-68 {
+  background-color: #1e0e62;
+  border-radius: 8px;
+  border-style: none;
+  box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-weight: 600;
+  padding: 13px 20px;
+  text-align: center;
+  transform: translate3d(0, 0, 0);
+  transition: all .3s;
+}
+
+.button-68:hover {
+  background-color: #2c1594;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: .35s;
+}
+
+.button-68:active {
+  transform: translateY(2px);
+  transition-duration: .35s;
+}
+
+.button-68:hover {
+  box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
+}
+
+button {
+    width: 80px;
+}
+
+.inline {
+    /* display: flex; */
+    width: 100%;
 }
 
 .container {
